--- a/renren-admin/src/main/resources/templates/modules/invoice/invoiceinfo.html
+++ b/renren-admin/src/main/resources/templates/modules/invoice/invoiceinfo.html
@@ -26,33 +26,33 @@
     <div class="panel-heading">{{title}}</div>
     <form class="form-horizontal">
         <div class="form-group">
-            <div class="col-sm-2 control-label">发票代码(长度10位或者12位)</div>
+            <div class="col-sm-2 control-label">发票代码</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="invoiceInfo.invoiceCode" placeholder="发票代码(长度10位或者12位)"/>
+                <input type="text" class="form-control" v-model="invoiceInfo.invoiceCode" placeholder="发票代码"/>
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-2 control-label">发票号码(长度8位)</div>
+            <div class="col-sm-2 control-label">发票号码</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="invoiceInfo.invoiceNumber" placeholder="发票号码(长度8位)"/>
+                <input type="text" class="form-control" v-model="invoiceInfo.invoiceNumber" placeholder="发票号码"/>
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-2 control-label">开票时间(时间格式必须为：2017-05-11)</div>
+            <div class="col-sm-2 control-label">开票时间</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="invoiceInfo.billTime" placeholder="开票时间(时间格式必须为：2017-05-11)"/>
+                <input type="text" class="form-control" v-model="invoiceInfo.billTime" placeholder="开票时间"/>
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-2 control-label">校验码(检验码必须是后六位)</div>
+            <div class="col-sm-2 control-label">校验码</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="invoiceInfo.checkCode" placeholder="校验码(检验码必须是后六位)"/>
+                <input type="text" class="form-control" v-model="invoiceInfo.checkCode" placeholder="校验码"/>
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-2 control-label">开具金额、不含税价（单位为分）</div>
+            <div class="col-sm-2 control-label">开具金额</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="invoiceInfo.invoiceAmount" placeholder="开具金额、不含税价（单位为分）"/>
+                <input type="text" class="form-control" v-model="invoiceInfo.invoiceAmount" placeholder="开具金额"/>
             </div>
         </div>
         <div class="form-group">
@@ -62,9 +62,9 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-2 control-label">状态(0:删除 1:正常)</div>
+            <div class="col-sm-2 control-label">状态</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="invoiceInfo.state" placeholder="状态(0:删除 1:正常)"/>
+                <input type="text" class="form-control" v-model="invoiceInfo.state" placeholder="状态"/>
             </div>
         </div>
         <div class="form-group">
@@ -74,9 +74,9 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-2 control-label">创建时间(时间格式必须为：2017-05-11)</div>
+            <div class="col-sm-2 control-label">创建时间</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="invoiceInfo.crtDt" placeholder="创建时间(时间格式必须为：2017-05-11)"/>
+                <input type="text" class="form-control" v-model="invoiceInfo.crtDt" placeholder="创建时间"/>
             </div>
         </div>
         <div class="form-group">
@@ -86,9 +86,9 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-2 control-label">最后修改时间(时间格式必须为：2017-05-11)</div>
+            <div class="col-sm-2 control-label">最后修改时间</div>
             <div class="col-sm-10">
-                <input type="text" class="form-control" v-model="invoiceInfo.lastChgDt" placeholder="最后修改时间(时间格式必须为：2017-05-11)"/>
+                <input type="text" class="form-control" v-model="invoiceInfo.lastChgDt" placeholder="最后修改时间"/>
             </div>
         </div>
         <div class="form-group">
