--- a/renren-admin/src/main/resources/templates/modules/invoice/invoiceinfo.html
+++ b/renren-admin/src/main/resources/templates/modules/invoice/invoiceinfo.html
@@ -9,7 +9,7 @@
     <div v-show="showList">
         <div class="grid-btn">
             <#if shiro.hasPermission("invoice:invoiceinfo:save")>
-            <a class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>&nbsp;新增</a>
+            <a class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>&nbsp;发票核验</a>
         </#if>
         <#if shiro.hasPermission("invoice:invoiceinfo:update")>
         <a class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
@@ -25,6 +25,12 @@
 <div v-show="!showList" class="panel panel-default">
     <div class="panel-heading">{{title}}</div>
     <form class="form-horizontal">
+        <div class="form-group">
+            <div class="col-sm-2 control-label">发票二维码字符串</div>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" v-model="invoiceInfo.qrCode" placeholder="发票二维码字符串"/>
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-sm-2 control-label">发票代码</div>
             <div class="col-sm-10">
