--- a/renren-admin/src/main/resources/templates/modules/invoice/invocheckdetl.html
+++ b/renren-admin/src/main/resources/templates/modules/invoice/invocheckdetl.html
@@ -9,7 +9,7 @@
     <div v-show="showList">
         <div class="grid-btn">
             <div class="form-group col-sm-2">
-                <input type="text" class="form-control" v-model="q.name" @keyup.enter="query" placeholder="搜索内容">
+                <input type="text" class="form-control" v-model="q.name" @keyup.enter="query" placeholder="可根据发票号，录入人，录入时间进行查询">
             </div>
             <a class="btn btn-default" @click="query">查询</a>
             <#if shiro.hasPermission("invoice:invocheckdetl:scan")>
